<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ИСУ Торговля</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_login">ИСУ Торговля</string>
    <string name="title_activity_product_list">Наличие на складе</string>
    <string name="title_activity_client_list">Список контрагентов</string>
    <string name="btn_search">Найти</string>
    <string name="lbl_from">С</string>
    <string name="lbl_to">ПО</string>
    <string name="lbl_login">Логин</string>
    <string name="lbl_password">Пароль</string>
    <string name="btn_login">Вход</string>
    <string name="lbl_category">Категория</string>
    <string name="lbl_subcategory">Подкатегория</string>
    <string name="lbl_name">Наименование</string>
    <string name="lbl_date_input">__.__.____</string>
    <string name="lbl_client">Контрагент</string>
    <string name="ellipses">&#8230;</string>
    <string name="lbl_trade_point">Торговая точка</string>
    <string name="lbl_date_delivery">Дата доставки</string>
    <string name="lbl_time_delivery">Время доставки</string>
    <string name="lbl_doc_type">Тип документа</string>
    <string name="lbl_invoice">Счет-фактура</string>
    <string name="lbl_waybill">Накладная</string>
    <string name="lbl_additional">Дополнительно</string>
    <string name="lbl_money_must_be">Деньги обязат.</string>
    <string name="lbl_money_simple">Просто деньги</string>
    <string name="lbl_certificate">Сертификат</string>
    <string name="lbl_sticker">Наклейки</string>
    <string name="lbl_add">Добавить</string>
    <string name="lbl_delete">Удалить</string>
    <string name="title_activity_request">Заявка</string>
    <string name="save">Сохранить</string>
    <string name="remember">запомнить</string>
    <string name="request_list">Заявки</string>
    <string name="lbl_total">Итого:</string>
    <string name="lbl_nds">С НДС:</string>
    <string name="sync">Синхронизация</string>
    <string name="title_activity_sync">Синхронизация</string>
    <string name="action_settings">Settings</string>
    <string name="sync_last_execution">Последний запуск:</string>
    <string name="btn_sync_execution">Запустить</string>
    <string name="title_activity_request_list">Заявки</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_dates">Дата доставки С и ПО</string>
    <string name="lbl_db_type_main">1С</string>
    <string name="lbl_db_type_local">Лок.</string>
    <string name="lbl_price">Цена:</string>
    <string name="lbl_saldo">Остаток:</string>
    <string name="ok">OK</string>

</resources>