<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client"/>
        
        <TextView android:id="@+id/clientName"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        
        <Button android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="@string/ellipses"
            android:onClick="onPickClient"/>
        
    </LinearLayout>
    
    <EditText android:id="@+id/tradePoint"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/lbl_trade_point"
		android:inputType="text"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        
        <LinearLayout android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbl_date_delivery"/>
        
        	<Button android:id="@+id/dateReceive"
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbl_date_input"
	            android:onClick="onPickDateReceive"/>
        	
        </LinearLayout>
        
        <LinearLayout android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbl_doc_type"/>
        
        	<RadioGroup android:id="@+id/doc_type"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content">
        	    
        	    <RadioButton android:id="@+id/invoice"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/lbl_invoice"/>
        	    
        	    <RadioButton android:id="@+id/waybill"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/lbl_waybill"
        	        android:checked="true"/>
        	    
        	</RadioGroup>
	        
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        
        <LinearLayout android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbl_time_delivery"/>
        
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        	    
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_from"/>
                
                <EditText android:id="@+id/delivery_time_1_from"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:inputType="number"
	        	    android:maxLength="2"/>
                
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_to"/>
                
                <EditText android:id="@+id/delivery_time_1_to"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:inputType="number"
	        	    android:maxLength="2"/>
                
            </LinearLayout>
            
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        	    
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_from"/>
                
                <EditText android:id="@+id/delivery_time_2_from"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:inputType="number"/>
                
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_to"/>
                
                <EditText android:id="@+id/delivery_time_2_to"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:inputType="number"/>
                
            </LinearLayout>
        	
        </LinearLayout>
        
        <LinearLayout android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbl_additional"/>
            
            <CheckBox android:id="@+id/cb_money_must_be"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_money_must_be"/>
            
            <CheckBox android:id="@+id/cb_money_simple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_money_simple"/>
            
            <CheckBox android:id="@+id/cb_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_certificate"/>
            
            <CheckBox android:id="@+id/cb_sticker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sticker"/>
	        
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
</ScrollView>