<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login" >

    <EditText android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_login"
        android:inputType="text"
        android:layout_centerHorizontal="true"/>
    
    <EditText android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password"
        android:inputType="textPassword"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"/>
    
    <Button android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:onClick="onLogin"
        android:layout_below="@id/password"
        android:layout_alignRight="@id/password"/>
    
    <CheckBox android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:layout_below="@id/password"
        android:layout_alignLeft="@id/password"
        android:layout_alignBaseline="@id/btnlogin"/>

</RelativeLayout>