<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RequestProductListActivity">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_category"/>
        
        <Spinner android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_subcategory"/>
        
        <Spinner android:id="@+id/subcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <EditText android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name"/>
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:onClick="onSearch"/>

</LinearLayout>