<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_total"
                android:gravity="right"/>
            
            <TextView android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>
            
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nds"
                android:gravity="right"/>
            
            <TextView android:id="@+id/nds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add"
            android:onClick="onProductAdd"/>
        
        <Button android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete"
            android:onClick="onProductDelete"
            android:enabled="false"/>
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
    
</LinearLayout>
</ScrollView>